--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "moment": "^2.29.4",
     "proptypes": "^1.1.0",
     "react": "^18.2.0",
     "react-detect-offline": "^2.4.5",
@@ -18,6 +19,7 @@
     "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.54.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
