--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
